@@ -3,10 +3,13 @@ language: python
 python:
   - 3.6
   - 3.5
-  - 3.4
   - 2.7
 
 sudo: false
+
+services:
+    - mysql
+    - postgresql
 
 addons:
   apt:
@@ -17,7 +20,6 @@ cache:
   directories:
     - node_modules
     - $HOME/.pip/cache
-
 
 env:
   global:
@@ -47,8 +49,6 @@ matrix:
     # DJANGO 1.11
     - python: 2.7
       env: DJANGO=1.11 DATABASE_URL='sqlite://localhost/:memory:'
-    - python: 3.4
-      env: DJANGO=1.11 DATABASE_URL='sqlite://localhost/:memory:'
     - python: 3.5
       env: DJANGO=1.11 DATABASE_URL='mysql://root@127.0.0.1/djangocms_test'
     - python: 3.6
@@ -59,8 +59,6 @@ matrix:
       env: DJANGO=1.11 DATABASE_URL='postgres://postgres@127.0.0.1/djangocms_test' AUTH_USER_MODEL='customuserapp.User'
 
     # DJANGO 2.0
-    - python: 3.4
-      env: DJANGO=2.0 DATABASE_URL='sqlite://localhost/:memory:'
     - python: 3.5
       env: DJANGO=2.0 DATABASE_URL='mysql://root@127.0.0.1/djangocms_test'
     - python: 3.6
@@ -83,9 +81,30 @@ matrix:
       env: DJANGO=2.1 DATABASE_URL='postgres://postgres@127.0.0.1/djangocms_test' AUTH_USER_MODEL='customuserapp.User'
     - python: 3.6
       env: TEST_DOCS=1 DJANGO=2.1 DATABASE_URL='sqlite://localhost/:memory:'
+
+    # DJANGO 2.2
+    - python: 3.5
+      env: DJANGO=2.2 DATABASE_URL='sqlite://localhost/:memory:'
+      dist: xenial
+      sudo: true
+    - python: 3.5
+      env: DJANGO=2.2 DATABASE_URL='mysql://root@127.0.0.1/djangocms_test'
+    - python: 3.6
+      env: DJANGO=2.2 DATABASE_URL='postgres://postgres@127.0.0.1/djangocms_test'
+    - python: 3.6
+      env: DJANGO=2.2 DATABASE_URL='postgres://postgres@127.0.0.1/djangocms_test' AUTH_USER_MODEL='emailuserapp.EmailUser'
+    - python: 3.6
+      env: DJANGO=2.2 DATABASE_URL='postgres://postgres@127.0.0.1/djangocms_test' AUTH_USER_MODEL='customuserapp.User'
+    - python: 3.6
+      env: TEST_DOCS=1 DJANGO=2.2 DATABASE_URL='sqlite://localhost/:memory:'
+      dist: xenial
+      sudo: true
+
+  allow_failures:
+    - python: 2.7
+      env: DJANGO=1.11 DATABASE_URL='sqlite://localhost/:memory:'
   exclude:
     - python: 2.7
-    - python: 3.4
     - python: 3.5
     - python: 3.6
   fast_finish: true
