@@ -12,7 +12,7 @@ https://github.com/divio/djangocms-text-ckeditor/archive/support/4.0.x.zip
 https://github.com/ojii/django-better-test/archive/8aa2407d097fe3789b74682f0e6bd7d15d449416.zip#egg=django-better-test
 https://github.com/ojii/django-app-manage/archive/65da18ef234a4e985710c2c0ec760023695b40fe.zip#egg=django-app-manage
 iptools
-sphinx==1.4.5
+sphinx==1.8.5
 sphinxcontrib-spelling
 pyflakes==1.1.0
 pyenchant
